--- a/redhat-developer-hub/redhat-developer-hub-config-template/templates/rhdh-config-template.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-config-template/templates/rhdh-config-template.yaml
@@ -92,7 +92,7 @@ data:
             oauth2_proxy_cookie_secret: {{ randAlpha 32 | lower | b64enc }}
             oauth2_proxy_oidc_issuer: "{{ $.Values.oauth2.issuer }}"
             orchestrator_sonataflow_data_index_service: "{{ $.Values.orchestrator.sonataFlowDataIndexService }}"
-            postgresql_existingSecret: "{{ $.Values.nameOverride }}"
+            postgresql_existingSecret: "{{ $.Values.nameOverride }}"-postgresql
 {{- end }}
 
         - name: Add new files to the repository
