--- a/redhat-developer-hub/redhat-developer-hub-config-template/templates/rhdh-config-template.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-config-template/templates/rhdh-config-template.yaml
@@ -1,6 +1,6 @@
 kind: ConfigMap
 metadata:
-  name:  rhdh-config-template
+  name:  "rhdh-config-template-{{ $.Values.nameOverride }}"
   namespace: {{ .Values.namespace }}
   annotations:
     {{- include "argocd.syncwave" . | nindent 4 }}
@@ -115,6 +115,6 @@ data:
             chdir: >-
               /tmp/{{ $item.project }}
             cmd: >-
-              git push {{ "{{" }} _git_template_repo_url {{ "}}" }}
+              git push {{ "{{" }} _git_template_repo_url {{ "}}" }}-{{ $.Values.nameOverride }}
 
 {{- end }}
