--- a/redhat-developer-hub/redhat-developer-hub-application/values.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-application/values.yaml
@@ -11,6 +11,6 @@ helm:
     git:
       host: 
       group: rhdh
-      repo: developer-hub-config-{{ $.Values.nameOverride }}
+      repo: developer-hub-config
       revision: main
       path: values.yaml
