--- a/redhat-developer-hub/redhat-developer-hub-config-template/templates/rhdh-config-template.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-config-template/templates/rhdh-config-template.yaml
@@ -117,13 +117,13 @@ data:
             cmd: >-
               git push {{ "{{" }} _git_template_repo_url {{ "}}" }}-{{ $.Values.nameOverride }}
 
-        - name: Change project visibility
-          ansible.builtin.uri:
-            url: "https://root:{{ $.Values.gitlab.rootPassword }}@{{ $.Values.gitlab.host }}/api/v4/projects/{{ $.Values.rhdh.template.group }}/{{ $item.project }}-{{ $.Values.nameOverride }}"
-            method: PUT
-            body_format: json
-            body:
-              visibility: "public"
-            status_code: 200
+        # - name: Change project visibility
+        #   ansible.builtin.uri:
+        #     url: "https://root:{{ $.Values.gitlab.rootPassword }}@{{ $.Values.gitlab.host }}/api/v4/projects/{{ $.Values.rhdh.template.group }}/{{ $item.project }}-{{ $.Values.nameOverride }}"
+        #     method: PUT
+        #     body_format: json
+        #     body:
+        #       visibility: "public"
+        #     status_code: 200
 
 {{- end }}
