--- a/redhat-developer-hub/redhat-developer-hub-config-template/templates/rhdh-config-template.yaml
+++ b/redhat-developer-hub/redhat-developer-hub-config-template/templates/rhdh-config-template.yaml
@@ -117,6 +117,7 @@ data:
             chdir: >-
               /tmp/{{ $item.project }}
             cmd: >-
+              git push --set-upstream origin "{{ $.Values.nameOverride }}"
               git push {{ "{{" }} _git_template_repo_url {{ "}}" }} "{{ $.Values.nameOverride }}"
 
 {{- end }}
