--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -557,17 +557,19 @@ spec:
           - phone
           - offline_access
           - microprofile-jwt
+
+    {{- range .Values.clients }}
       - id: {{ uuidv4 }}
-        clientId: {{ .Values.client.backstage.name }}
+        clientId: {{ .Values.client.name }}
         surrogateAuthRequired: false
         enabled: true
         alwaysDisplayInConsole: false
         clientAuthenticatorType: client-secret
         secret: {{ include "keycloak-realmimport.client-backstage-secret" . }}
         redirectUris:
-          - {{ .Values.client.backstage.redirectUri }}
+          - {{ .Values.client.redirectUri }}
         webOrigins:
-          - '{{ .Values.client.backstage.webOrigin }}'
+          - '{{ .Values.client.webOrigin }}'
         notBefore: 0
         bearerOnly: false
         consentRequired: false
@@ -635,6 +637,10 @@ spec:
           - phone
           - offline_access
           - microprofile-jwt
+    {{- end }}
+
+
+
       - id: {{ uuidv4 }}
         clientId: {{ .Values.client.trustedartifactsigner.name }}
         rootUrl: ""
