--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -558,6 +558,7 @@ spec:
           - offline_access
           - microprofile-jwt
 
+# {{ .Values.clients }}
     {{- range .Values.clients }}
       - id: {{ uuidv4 }}
         clientId: {{ .name }}
