--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -12,8 +12,6 @@ metadata:
     app: keycloak
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
-    clients: {{ $.Values.clients }}
-
 spec:
   keycloakCRName: {{ $.Values.keycloak.name }}
   realm:
@@ -561,16 +559,16 @@ spec:
           - microprofile-jwt
     {{- range $.Values.clients }}
       - id: {{ uuidv4 }}
-        clientId: {{ .name }}
+        clientId: {{ $.name }}
         surrogateAuthRequired: false
         enabled: true
         alwaysDisplayInConsole: false
         clientAuthenticatorType: client-secret
         secret: {{ include "keycloak-realmimport.client-backstage-secret" . }}
         redirectUris:
-          - {{ .redirectUri }}
+          - {{ $.redirectUri }}
         webOrigins:
-          - '{{ .webOrigin }}'
+          - '{{ $.webOrigin }}'
         notBefore: 0
         bearerOnly: false
         consentRequired: false
