--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -565,7 +565,7 @@ spec:
         enabled: true
         alwaysDisplayInConsole: false
         clientAuthenticatorType: client-secret
-        secret: {{ include "keycloak-realmimport.client-backstage-secret" . }}
+        secret: {{ include "keycloak-realmimport.client-backstage-secret" $ }}
         redirectUris:
           - {{ $item.redirectUri }}
         webOrigins:
