--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -566,10 +566,22 @@ spec:
         alwaysDisplayInConsole: false
         clientAuthenticatorType: client-secret
         secret: {{ include "keycloak-realmimport.client-backstage-secret" $ }}
+        # redirectUris:
+        #   - {{ $item.redirectUri }}
+        {{- if $item.redirectUri }}
         redirectUris:
           - {{ $item.redirectUri }}
+        {{- else }}
+        redirectUris: []
+        {{- end }}
+        # webOrigins:
+        #   - '{{ $item.webOrigin }}'
+        {{- if $item.redirectUri }}
         webOrigins:
           - '{{ $item.webOrigin }}'
+        {{- else }}
+        webOrigins: []
+        {{- end }}
         notBefore: 0
         bearerOnly: false
         consentRequired: false
@@ -693,82 +705,82 @@ spec:
           - phone
           - offline_access
           - microprofile-jwt
-      - id: {{ uuidv4 }}
-        clientId: {{ .Values.client.backstagePlugin.name }}
-        surrogateAuthRequired: false
-        enabled: true
-        alwaysDisplayInConsole: false
-        clientAuthenticatorType: client-secret
-        secret: {{ include "keycloak-realmimport.client-backstage-plugin-secret" . }}
-        redirectUris: []
-        webOrigins: []
-        notBefore: 0
-        bearerOnly: false
-        consentRequired: false
-        standardFlowEnabled: true
-        implicitFlowEnabled: false
-        directAccessGrantsEnabled: true
-        serviceAccountsEnabled: true
-        publicClient: false
-        frontchannelLogout: true
-        protocol: openid-connect
-        attributes:
-          oidc.ciba.grant.enabled: 'false'
-          backchannel.logout.session.required: 'true'
-          display.on.consent.screen: 'false'
-          oauth2.device.authorization.grant.enabled: 'false'
-          backchannel.logout.revoke.offline.tokens: 'false'
-        authenticationFlowBindingOverrides: {}
-        fullScopeAllowed: true
-        nodeReRegistrationTimeout: -1
-        protocolMappers:
-          - id: {{ uuidv4 }}
-            name: Client IP Address
-            protocol: openid-connect
-            protocolMapper: oidc-usersessionmodel-note-mapper
-            consentRequired: false
-            config:
-              user.session.note: clientAddress
-              introspection.token.claim: 'true'
-              id.token.claim: 'true'
-              access.token.claim: 'true'
-              claim.name: clientAddress
-              jsonType.label: String
-          - id: {{ uuidv4 }}
-            name: Client ID
-            protocol: openid-connect
-            protocolMapper: oidc-usersessionmodel-note-mapper
-            consentRequired: false
-            config:
-              user.session.note: client_id
-              introspection.token.claim: 'true'
-              id.token.claim: 'true'
-              access.token.claim: 'true'
-              claim.name: client_id
-              jsonType.label: String
-          - id: {{ uuidv4 }}
-            name: Client Host
-            protocol: openid-connect
-            protocolMapper: oidc-usersessionmodel-note-mapper
-            consentRequired: false
-            config:
-              user.session.note: clientHost
-              introspection.token.claim: 'true'
-              id.token.claim: 'true'
-              access.token.claim: 'true'
-              claim.name: clientHost
-              jsonType.label: String
-        defaultClientScopes:
-          - profile
-          - roles
-          - email
-        optionalClientScopes:
-          - web-origins
-          - acr
-          - address
-          - phone
-          - offline_access
-          - microprofile-jwt
+      # - id: {{ uuidv4 }}
+      #   clientId: {{ .Values.client.backstagePlugin.name }}
+      #   surrogateAuthRequired: false
+      #   enabled: true
+      #   alwaysDisplayInConsole: false
+      #   clientAuthenticatorType: client-secret
+      #   secret: {{ include "keycloak-realmimport.client-backstage-plugin-secret" . }}
+      #   redirectUris: []
+      #   webOrigins: []
+      #   notBefore: 0
+      #   bearerOnly: false
+      #   consentRequired: false
+      #   standardFlowEnabled: true
+      #   implicitFlowEnabled: false
+      #   directAccessGrantsEnabled: true
+      #   serviceAccountsEnabled: true
+      #   publicClient: false
+      #   frontchannelLogout: true
+      #   protocol: openid-connect
+      #   attributes:
+      #     oidc.ciba.grant.enabled: 'false'
+      #     backchannel.logout.session.required: 'true'
+      #     display.on.consent.screen: 'false'
+      #     oauth2.device.authorization.grant.enabled: 'false'
+      #     backchannel.logout.revoke.offline.tokens: 'false'
+      #   authenticationFlowBindingOverrides: {}
+      #   fullScopeAllowed: true
+      #   nodeReRegistrationTimeout: -1
+      #   protocolMappers:
+      #     - id: {{ uuidv4 }}
+      #       name: Client IP Address
+      #       protocol: openid-connect
+      #       protocolMapper: oidc-usersessionmodel-note-mapper
+      #       consentRequired: false
+      #       config:
+      #         user.session.note: clientAddress
+      #         introspection.token.claim: 'true'
+      #         id.token.claim: 'true'
+      #         access.token.claim: 'true'
+      #         claim.name: clientAddress
+      #         jsonType.label: String
+      #     - id: {{ uuidv4 }}
+      #       name: Client ID
+      #       protocol: openid-connect
+      #       protocolMapper: oidc-usersessionmodel-note-mapper
+      #       consentRequired: false
+      #       config:
+      #         user.session.note: client_id
+      #         introspection.token.claim: 'true'
+      #         id.token.claim: 'true'
+      #         access.token.claim: 'true'
+      #         claim.name: client_id
+      #         jsonType.label: String
+      #     - id: {{ uuidv4 }}
+      #       name: Client Host
+      #       protocol: openid-connect
+      #       protocolMapper: oidc-usersessionmodel-note-mapper
+      #       consentRequired: false
+      #       config:
+      #         user.session.note: clientHost
+      #         introspection.token.claim: 'true'
+      #         id.token.claim: 'true'
+      #         access.token.claim: 'true'
+      #         claim.name: clientHost
+      #         jsonType.label: String
+      #   defaultClientScopes:
+      #     - profile
+      #     - roles
+      #     - email
+      #   optionalClientScopes:
+      #     - web-origins
+      #     - acr
+      #     - address
+      #     - phone
+      #     - offline_access
+      #     - microprofile-jwt
       - id: {{ $clientBrokerContainerId }}
         clientId: broker
         name: "${client_broker}"
