--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -663,7 +663,7 @@ spec:
         alwaysDisplayInConsole: false
         clientAuthenticatorType: "client-secret"
         redirectUris: 
-          - urn:ietf:wg:oauth:2.0:oob
+          - "urn:ietf:wg:oauth:2.0:oob"
           - "*"
         webOrigins: []
         notBefore: 0
