--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -653,58 +653,58 @@ spec:
 
 
 
-      - id: {{ uuidv4 }}
-        clientId: {{ .Values.client.trustedartifactsigner.name }}
-        rootUrl: ""
-        adminUrl: ""
-        baseUrl: ""
-        surrogateAuthRequired: false
-        enabled: true
-        alwaysDisplayInConsole: false
-        clientAuthenticatorType: "client-secret"
-        redirectUris: 
-          - "urn:ietf:wg:oauth:2.0:oob"
-          - "*"
-        webOrigins: []
-        notBefore: 0
-        bearerOnly: false
-        consentRequired: false
-        standardFlowEnabled: true
-        implicitFlowEnabled: false
-        directAccessGrantsEnabled: true
-        serviceAccountsEnabled: false
-        publicClient: true
-        frontchannelLogout: true
-        protocol: "openid-connect"
-        attributes: 
-          oidc.ciba.grant.enabled: "false"
-          oauth2.device.authorization.grant.enabled: "false"
-          backchannel.logout.session.required: "true"
-          backchannel.logout.revoke.offline.tokens: "false"
-        authenticationFlowBindingOverrides: {}
-        fullScopeAllowed: true
-        nodeReRegistrationTimeout: -1   
-        protocolMappers:
-          - id: {{ uuidv4 }}
-            name: "trusted-artifact-signer-audience"
-            protocol: "openid-connect"
-            protocolMapper: "oidc-audience-mapper"
-            consentRequired: false
-            config:
-              included.client.audience: "trusted-artifact-signer"
-              id.token.claim: "false"
-              access.token.claim: "true"   
-        defaultClientScopes:
-          - profile
-          - roles
-          - email
-          - web-origins
-          - acr
-        optionalClientScopes:
-          - address
-          - phone
-          - offline_access
-          - microprofile-jwt
+      # - id: {{ uuidv4 }}
+      #   clientId: {{ .Values.client.trustedartifactsigner.name }}
+      #   rootUrl: ""
+      #   adminUrl: ""
+      #   baseUrl: ""
+      #   surrogateAuthRequired: false
+      #   enabled: true
+      #   alwaysDisplayInConsole: false
+      #   clientAuthenticatorType: "client-secret"
+      #   redirectUris: 
+      #     - "urn:ietf:wg:oauth:2.0:oob"
+      #     - "*"
+      #   webOrigins: []
+      #   notBefore: 0
+      #   bearerOnly: false
+      #   consentRequired: false
+      #   standardFlowEnabled: true
+      #   implicitFlowEnabled: false
+      #   directAccessGrantsEnabled: true
+      #   serviceAccountsEnabled: false
+      #   publicClient: true
+      #   frontchannelLogout: true
+      #   protocol: "openid-connect"
+      #   attributes: 
+      #     oidc.ciba.grant.enabled: "false"
+      #     oauth2.device.authorization.grant.enabled: "false"
+      #     backchannel.logout.session.required: "true"
+      #     backchannel.logout.revoke.offline.tokens: "false"
+      #   authenticationFlowBindingOverrides: {}
+      #   fullScopeAllowed: true
+      #   nodeReRegistrationTimeout: -1   
+      #   protocolMappers:
+      #     - id: {{ uuidv4 }}
+      #       name: "trusted-artifact-signer-audience"
+      #       protocol: "openid-connect"
+      #       protocolMapper: "oidc-audience-mapper"
+      #       consentRequired: false
+      #       config:
+      #         included.client.audience: "trusted-artifact-signer"
+      #         id.token.claim: "false"
+      #         access.token.claim: "true"   
+      #   defaultClientScopes:
+      #     - profile
+      #     - roles
+      #     - email
+      #     - web-origins
+      #     - acr
+      #   optionalClientScopes:
+      #     - address
+      #     - phone
+      #     - offline_access
+      #     - microprofile-jwt
       - id: {{ $clientBrokerContainerId }}
         clientId: broker
         name: "${client_broker}"
