--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -572,7 +572,7 @@ spec:
         {{- else }}
         redirectUris: []
         {{- end }}
-        {{- if $item.redirectUri }}
+        {{- if $item.webOrigin }}
         webOrigins:
           - '{{ $item.webOrigin }}'
         {{- else }}
