--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -647,147 +647,58 @@ spec:
           - microprofile-jwt
     {{- end }}
 
-    {{- range $item := .Values.client }}
       - id: {{ uuidv4 }}
-        clientId: {{ $item.name }}
+        clientId: {{ .Values.client.trustedartifactsigner.name }}
+        rootUrl: ""
+        adminUrl: ""
+        baseUrl: ""
         surrogateAuthRequired: false
         enabled: true
         alwaysDisplayInConsole: false
-        clientAuthenticatorType: client-secret
-        secret: {{ if eq $item.name "backstage-plugin" }}{{ include "keycloak-realmimport.client-backstage-plugin-secret" $ }}{{ else }}{{ include "keycloak-realmimport.client-backstage-secret" $ }}{{ end }}
-        {{- if $item.redirectUri }}
-        redirectUris:
-          - {{ $item.redirectUri }}
-        {{- else }}
-        redirectUris: []
-        {{- end }}
-        {{- if $item.webOrigin }}
-        webOrigins:
-          - '{{ $item.webOrigin }}'
-        {{- else }}
+        clientAuthenticatorType: "client-secret"
+        redirectUris: 
+          - "urn:ietf:wg:oauth:2.0:oob"
+          - "*"
         webOrigins: []
-        {{- end }}
         notBefore: 0
         bearerOnly: false
         consentRequired: false
         standardFlowEnabled: true
         implicitFlowEnabled: false
         directAccessGrantsEnabled: true
-        serviceAccountsEnabled: true
-        publicClient: false
+        serviceAccountsEnabled: false
+        publicClient: true
         frontchannelLogout: true
-        protocol: openid-connect
-        attributes:
-          oidc.ciba.grant.enabled: 'false'
-          backchannel.logout.session.required: 'true'
-          display.on.consent.screen: 'false'
-          oauth2.device.authorization.grant.enabled: 'false'
-          backchannel.logout.revoke.offline.tokens: 'false'
+        protocol: "openid-connect"
+        attributes: 
+          oidc.ciba.grant.enabled: "false"
+          oauth2.device.authorization.grant.enabled: "false"
+          backchannel.logout.session.required: "true"
+          backchannel.logout.revoke.offline.tokens: "false"
         authenticationFlowBindingOverrides: {}
         fullScopeAllowed: true
-        nodeReRegistrationTimeout: -1
+        nodeReRegistrationTimeout: -1   
         protocolMappers:
           - id: {{ uuidv4 }}
-            name: Client IP Address
-            protocol: openid-connect
-            protocolMapper: oidc-usersessionmodel-note-mapper
+            name: "trusted-artifact-signer-audience"
+            protocol: "openid-connect"
+            protocolMapper: "oidc-audience-mapper"
             consentRequired: false
             config:
-              user.session.note: clientAddress
-              introspection.token.claim: 'true'
-              id.token.claim: 'true'
-              access.token.claim: 'true'
-              claim.name: clientAddress
-              jsonType.label: String
-          - id: {{ uuidv4 }}
-            name: Client ID
-            protocol: openid-connect
-            protocolMapper: oidc-usersessionmodel-note-mapper
-            consentRequired: false
-            config:
-              user.session.note: client_id
-              introspection.token.claim: 'true'
-              id.token.claim: 'true'
-              access.token.claim: 'true'
-              claim.name: client_id
-              jsonType.label: String
-          - id: {{ uuidv4 }}
-            name: Client Host
-            protocol: openid-connect
-            protocolMapper: oidc-usersessionmodel-note-mapper
-            consentRequired: false
-            config:
-              user.session.note: clientHost
-              introspection.token.claim: 'true'
-              id.token.claim: 'true'
-              access.token.claim: 'true'
-              claim.name: clientHost
-              jsonType.label: String
+              included.client.audience: "trusted-artifact-signer"
+              id.token.claim: "false"
+              access.token.claim: "true"   
         defaultClientScopes:
           - profile
           - roles
           - email
-        optionalClientScopes:
           - web-origins
           - acr
+        optionalClientScopes:
           - address
           - phone
           - offline_access
           - microprofile-jwt
-    {{- end }}
-
-      # - id: {{ uuidv4 }}
-      #   clientId: {{ .Values.client.trustedartifactsigner.name }}
-      #   rootUrl: ""
-      #   adminUrl: ""
-      #   baseUrl: ""
-      #   surrogateAuthRequired: false
-      #   enabled: true
-      #   alwaysDisplayInConsole: false
-      #   clientAuthenticatorType: "client-secret"
-      #   redirectUris: 
-      #     - "urn:ietf:wg:oauth:2.0:oob"
-      #     - "*"
-      #   webOrigins: []
-      #   notBefore: 0
-      #   bearerOnly: false
-      #   consentRequired: false
-      #   standardFlowEnabled: true
-      #   implicitFlowEnabled: false
-      #   directAccessGrantsEnabled: true
-      #   serviceAccountsEnabled: false
-      #   publicClient: true
-      #   frontchannelLogout: true
-      #   protocol: "openid-connect"
-      #   attributes: 
-      #     oidc.ciba.grant.enabled: "false"
-      #     oauth2.device.authorization.grant.enabled: "false"
-      #     backchannel.logout.session.required: "true"
-      #     backchannel.logout.revoke.offline.tokens: "false"
-      #   authenticationFlowBindingOverrides: {}
-      #   fullScopeAllowed: true
-      #   nodeReRegistrationTimeout: -1   
-      #   protocolMappers:
-      #     - id: {{ uuidv4 }}
-      #       name: "trusted-artifact-signer-audience"
-      #       protocol: "openid-connect"
-      #       protocolMapper: "oidc-audience-mapper"
-      #       consentRequired: false
-      #       config:
-      #         included.client.audience: "trusted-artifact-signer"
-      #         id.token.claim: "false"
-      #         access.token.claim: "true"   
-      #   defaultClientScopes:
-      #     - profile
-      #     - roles
-      #     - email
-      #     - web-origins
-      #     - acr
-      #   optionalClientScopes:
-      #     - address
-      #     - phone
-      #     - offline_access
-      #     - microprofile-jwt
       - id: {{ $clientBrokerContainerId }}
         clientId: broker
         name: "${client_broker}"
