--- a/devspaces/values.yaml
+++ b/devspaces/values.yaml
@@ -10,6 +10,8 @@ devspaces:
     name: devspaces
     source: redhat-operators
     sourceNamespace: openshift-marketplace
+  cheCluster:
+    namespace: openshift-devspaces
 
 argocd:
   enabled: true
