--- a/showroom/templates/pipelinerun.yaml
+++ b/showroom/templates/pipelinerun.yaml
@@ -4,7 +4,7 @@ metadata:
   generateName: {{ include "showroom.fullname" . }}-
   name: {{ include "showroom.fullname" . }}-pipelinerun
   annotations:
-    "helm.sh/hook": post-install
+    # "helm.sh/hook": post-install
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec: 
