--- a/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
+++ b/keycloak/keycloak-realm-import/templates/keycloak-realmimport.yaml
@@ -447,7 +447,8 @@ spec:
         clientAuthenticatorType: client-secret
         secret: {{ include "keycloak-realmimport.client-backstage-plugin-secret" $ }}
         redirectUris: {{ .Values.client.openshift.redirectUri }}
-        webOrigins: {{ .Values.client.openshift.webOrigin }}
+        webOrigins: 
+          - {{ .Values.client.openshift.webOrigin }}
         notBefore: 0
         bearerOnly: false
         consentRequired: false
